auth-service/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service-v1
  labels:
    app: auth-service
    version: v1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: auth-service
      version: v1
  template:
    metadata:
      labels:
        app: auth-service # 与上面matchLabels一致
        version: v1
    spec:
      serviceAccountName: auth-service-account
      containers:
        - name: auth-service
          image: auth-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
              name: api
            - containerPort: 8081
              protocol: TCP
              name: actuator
      restartPolicy: Always
