auth-service/base/networking.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: auth-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: internal-tls-cert # 与cert-manager创建的Secret一致
      hosts:
        - "auth.placeholder.local"
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: auth-service
spec:
  hosts:
    - "auth.placeholder.local"
  gateways:
    - auth-gateway
  http:
    - route:
        - destination:
            host: auth-service
            subset: v1
            port:
              number: 80

---
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: auth-service-rule
spec:
  host: auth-service # 匹配svc
  trafficPolicy:
    loadBalancer:
      simple: RANDOM
  subsets:
    - name: v1
      labels:
        version: v1
